[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/Player.png" type="Texture" id=1]
[ext_resource path="res://assets/SeraphEnemy.png" type="Texture" id=2]
[ext_resource path="res://scripts/PlayerHumanActor.gd" type="Script" id=3]
[ext_resource path="res://scripts/EnemyActor.gd" type="Script" id=4]
[ext_resource path="res://scenes/BattleConductor.gd" type="Script" id=5]
[ext_resource path="res://scenes/UI/DialogBox.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/battle_music2.ogg" type="AudioStream" id=7]
[ext_resource path="res://scripts/PlayerSpecterActor.gd" type="Script" id=8]
[ext_resource path="res://assets/Seraph.png" type="Texture" id=9]
[ext_resource path="res://scripts/UI/LifeBar.gd" type="Script" id=10]

[sub_resource type="Animation" id=1]
resource_name = "attack"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -20, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "bond"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -375, 128 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite3:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 0.406126, 2.82843 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "effect"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -8, 0 ), Vector2( 0, 0 ), Vector2( 8, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true ]
}

[sub_resource type="Animation" id=5]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 20, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.45098, 0.45098, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.45098, 1, 0.52549, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true ]
}

[sub_resource type="Animation" id=9]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -2.85, -91.2 ), Vector2( 18.85, -91.2 ), Vector2( -2.85, -91.2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 4, 4 ), Vector2( 8, 8 ), Vector2( 8, 8 ), Vector2( 4, 4 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=10]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 4, 4 ), Vector2( 8, 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=11]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0.501961, 0.898039, 1, 0.501961 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -2.85, -91.2 ), Vector2( -2.85, -111.2 ), Vector2( -2.85, -91.2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 8, 8 ), Vector2( 4, 4 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=12]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 8, 8 ), Vector2( 4, 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="BattleConductor" type="Node2D"]
script = ExtResource( 5 )

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" type="ColorRect" parent="BackgroundLayer"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.4176, 0.45712, 0.48, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyActor" type="Node2D" parent="."]
position = Vector2( 877.301, 104.7 )
script = ExtResource( 4 )

[node name="Sprite3" type="Sprite" parent="EnemyActor"]
scale = Vector2( 6.28438, 5.72032 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="EnemyActor"]
anims/attack = SubResource( 1 )
anims/bond = SubResource( 2 )
anims/effect = SubResource( 3 )
anims/take_damage = SubResource( 4 )

[node name="PlayerHumanActor" type="Node2D" parent="."]
position = Vector2( 152.95, 428.451 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="PlayerHumanActor"]
scale = Vector2( 5.30469, 5.00782 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerHumanActor"]
anims/attack = SubResource( 5 )
anims/fortify = SubResource( 6 )
anims/rest = SubResource( 7 )
anims/take_damage = SubResource( 8 )

[node name="PlayerSpecterActor" type="Node2D" parent="."]
position = Vector2( 152.95, 428.451 )
script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="PlayerSpecterActor"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -2.85, -91.2 )
scale = Vector2( 4, 4 )
texture = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerSpecterActor"]
anims/attack = SubResource( 9 )
anims/awaken = SubResource( 10 )
anims/fortify = SubResource( 11 )
anims/retreat = SubResource( 12 )

[node name="GUILayer" type="CanvasLayer" parent="."]

[node name="PlayerLifeBar" type="ColorRect" parent="GUILayer"]
anchor_left = 0.281432
anchor_top = 0.461917
anchor_right = 0.281432
anchor_bottom = 0.461917
margin_bottom = 24.0
color = Color( 0, 0.854902, 0.27451, 1 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Tween" type="Tween" parent="GUILayer/PlayerLifeBar"]

[node name="BackBar" type="ColorRect" parent="GUILayer/PlayerLifeBar"]
show_behind_parent = true
margin_bottom = 24.0
color = Color( 1, 0.0235294, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpecterLifeBar" type="ColorRect" parent="GUILayer/PlayerLifeBar"]
margin_top = 24.0
margin_bottom = 48.0
color = Color( 0, 0.615686, 0.854902, 1 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="GUILayer/PlayerLifeBar/SpecterLifeBar"]

[node name="BackBar" type="ColorRect" parent="GUILayer/PlayerLifeBar/SpecterLifeBar"]
show_behind_parent = true
margin_bottom = 24.0
color = Color( 1, 0.0235294, 0, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="EnemyLifeBar" type="ColorRect" parent="GUILayer"]
anchor_left = 0.329785
anchor_top = 0.0791666
anchor_right = 0.329785
anchor_bottom = 0.0791666
margin_bottom = 24.0
color = Color( 0, 0.854902, 0.27451, 1 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Tween" type="Tween" parent="GUILayer/EnemyLifeBar"]

[node name="BackBar" type="ColorRect" parent="GUILayer/EnemyLifeBar"]
show_behind_parent = true
margin_bottom = 24.0
color = Color( 1, 0.0235294, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogBox" parent="GUILayer" instance=ExtResource( 6 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true
